fixed footer on ie

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-	background-color: #EEEEEE;
+	
 	background-image:url("../images/background.png");
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	min-height: 100%;
@@ -29,8 +29,8 @@ p {
     padding: 50px;
     flex: 1;
     display: flex;
-    /*flex-direction: row;*/
-    /*min-height: 100vh;*/
+    flex-direction: row;
+    min-height: 100vh;
 }
 /*end main page style*/
 
